# django-email-user

./: README.md  pyproject.toml
email_user/: admin.py  apps.py  forms.py  models.py
email_user/migrations/: 0001_initial.py
sample_project/: settings.py
